# evolve-idle

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
lang/: en-US.ftl
src/: action.rs  button.rs  clockwork.rs  engine.rs  evolution.rs  game.rs  lang.rs  main.rs  race.rs  resource.rs  structure.rs  util.rs
