[package]
name = "evolve-idle"
version = "0.1.0"
authors = ["John Bretz <johnfish218@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
fastrand = "1.7.0"
gemstone = "0.3.0"