[package]
name = "evolve-idle"
version = "0.1.0"
authors = ["John Bretz <johnfish218@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { git = "https://github.com/imgui-rs/imgui-rs", features = ["docking", "tables-api"] }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-glow-renderer = { git = "https://github.com/imgui-rs/imgui-rs" }
glow = "0.10.0"
glutin = "0.28.0"

fastrand = "1.7.0"
gemstone = "0.3.0"
enum-iterator = "1.1.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"